🌱 Update short_name nad name of manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Only One Shop | Iconic artefacts from Braun & co.",
+  "name": "We collect iconic artefacts fromBraun & co. ",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
