--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sass": "^1.53.0",
     "stripe": "^10.12.0",
     "styled-components": "^5.3.5",
+    "styled-media-query": "^2.1.2",
     "typed-redux-saga": "^1.5.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.0"
