--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
     "@types/redux-logger": "^3.0.9",
+    "clsx": "^2.0.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.9.0",
     "react": "^18.2.0",
