--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "stripe": "^10.12.0",
     "styled-components": "^5.3.5",
     "styled-media-query": "^2.1.2",
+    "swiper": "^10.3.0",
     "typed-redux-saga": "^1.5.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.0"
